--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Heros : IFDS/IDE Solver for Soot" />
+    <meta name="description" content="Heros : Multi-threaded, language-independent IFDS/IDE Solver" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/Sable/heros">View on GitHub</a>
 
           <h1 id="project_title">Heros</h1>
-          <h2 id="project_tagline">IFDS/IDE Solver for Soot</h2>
+          <h2 id="project_tagline">Multi-threaded, language-independent IFDS/IDE Solver</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/Sable/heros/zipball/master">Download this project as a .zip file</a>
