Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>Heros IFDS/IDE Solver</h1>
+        <p><img src="logo/heros-logo.png" alt="Logo"></p>
+
+<h1>Heros IFDS/IDE Solver</h1>
 
 <p>Heros is a generic implementation of an IFDS/IDE Solver that can be plugged into existing, Java-based program analysis frameworks. A reference connector exists for the <a href="http://www.sable.mcgill.ca/soot/">Soot</a> framework.</p>
 
